# multisynth

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: configuration.md  errors.md  providers.md
src/easy_ai_api/: __init__.py  client.py  exceptions.py  models.py
src/easy_ai_api/_core/: __init__.py  aliases.py  config.py  credentials.py  downloads.py  exceptions.py  media.py  polling.py  pricing.py  provider_catalog.py  public_api.py  retry.py
src/easy_ai_api/_core/schemas/: __init__.py  base.py  imagem.py  texto.py  video.py
src/easy_ai_api/audio/: _adapters.py
src/easy_ai_api/audio/providers/: __init__.py
src/easy_ai_api/image/: __init__.py  _adapters.py
src/easy_ai_api/image/providers/: __init__.py
src/easy_ai_api/text/: __init__.py
src/easy_ai_api/text/providers/: __init__.py
src/easy_ai_api/video/providers/: __init__.py
src/multisynth/: __init__.py  client.py  exceptions.py  models.py
src/multisynth/_core/: __init__.py  aliases.py  config.py  exceptions.py  files.py  http.py  media.py  pricing.py  provider_catalog.py
src/multisynth/_core/schemas/: __init__.py  audio.py  imagem.py
src/multisynth/audio/: __init__.py  _adapters.py
src/multisynth/image/: __init__.py  _adapters.py
src/multisynth/image/providers/: __init__.py
src/multisynth/text/: __init__.py  _adapters.py
src/multisynth/text/providers/: __init__.py
src/multisynth/video/: __init__.py  _adapters.py
tests/: test_aliases_and_models.py  test_audio_api.py  test_configuration_and_docs.py  test_credentials.py  test_image_api.py  test_imports.py  test_media_and_pricing.py  test_text_api.py  test_video_api.py
